* Dockerfile: Update consul-cli to version 0.3.1 * start_vault.sh: Cleanup old entries on restart (due to ip changes) * consul.json: Cleanup (indentation) * docker-compose.yml: Add port 53/udp

--- a/composition/docker-compose.yml
+++ b/composition/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         memlock: 9223372036854775807
     ports:
         - 53
+        - "53/udp"
         - 8200
         - 8501
     expose:
