--- a/composition/docker-compose.yml
+++ b/composition/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 networks:
   default:
     external:
-      name: vault
+      name: macvlan
 services:
   vault:
     image: mterron/vault
