--- a/composition/docker-compose.yml
+++ b/composition/docker-compose.yml
@@ -27,3 +27,11 @@ services:
     env_file: _env
     environment:
         - CONSUL_BOOTSTRAP_HOST
+#    cap_drop:
+#        - ALL
+    cap_add:
+        - NET_BIND_SERVICE
+        - SETFCAP
+        - SETUID
+        - SETGID
+        - IPC_LOCK
