Revert "Move the consul http socket to /var/run"
This reverts commit 3f1786b20514fb888314691e4c074ad12214ae6f.

--- a/etc/vault/config.json
+++ b/etc/vault/config.json
@@ -7,7 +7,7 @@
 
   "storage": {
     "consul": {
-      "address": "unix:///var/run/consul.http.sock",
+      "address": "unix:///data/consul.http.sock",
       "path": "vault/",
       "tls_ca_file": "/etc/tls/ca.pem",
       "tls_cert_file": "/etc/tls/client_certificate.pem",
