--- a/composition/docker-compose.yml
+++ b/composition/docker-compose.yml
@@ -5,29 +5,31 @@ services:
     restart: always
     ulimits:
         memlock: 9223372036854775807
+    volumes:
+        - /data
     ports:
         - 53
         - "53/udp"
         - 8200
-        - 8400
-        - 8501
-    expose:
         - 8300
         - 8301
+        - "8301/udp"
         - 8302
+        - "8302/udp"
+        - 8501
     dns:
-      - 127.0.0.1
+        - 127.0.0.1
     dns_search:
-      - service.consul
+        - service.consul
     env_file: _env
     environment:
         - CONSUL_BOOTSTRAP_HOST
     cap_drop:
         - ALL
     cap_add:
-        - NET_BIND_SERVICE
+        - CHOWN
         - SETFCAP
+        - NET_BIND_SERVICE
         - SETUID
         - SETGID
         - IPC_LOCK
-        - CHOWN
