Make Vault run as non-root

--- a/composition/docker-compose.yml
+++ b/composition/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     tmpfs:
       - /tmp
       - /run
+      - /home/vault
     env_file: _env
     environment:
       - CONSUL_BOOTSTRAP_HOST
